crates/zoid-tui/tests/snapshots/shell_snapshot__growing_message_box_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "format!(\"{:#?}\", terminal.backend().buffer())"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 24 },
    content: [
        "v0.3.0                                          zoid          Esc interrupt · : command · ^P palette",
        "  00:00 › what's causing the 500?                     █ ╭ ▾ repo ─────────────────────────────────╮ ",
        "                                                      █ │📦 repo   ⎇ main                         │ ", // hidden by multi-width symbols: [(58, " ")]
        "  00:00 zoid an unwrapped lookup in the handler.      █ ╰─────────────────────────────────────────╯ ",
        "                                                      █                                             ",
        "                                                      █ ╭ ▾ session ──────────────────────────────╮ ",
        "                                                      █ │🟢 (unnamed)                             │ ", // hidden by multi-width symbols: [(58, " ")]
        "                                                      █ │🤖  ·                                    │ ", // hidden by multi-width symbols: [(58, " ")]
        "                                                      █ ╰─────────────────────────────────────────╯ ",
        "                                                      █                                             ",
        "                                                      █ ╭ ▾ context · tokens ─────────────────────╮ ",
        "                                                      █ │churn                              cache │ ",
        "                                                      █ ╰─────────────────────────────────────────╯ ",
        "                                                      █                                             ",
        "                                                      █ ╭ ▾ tasks ────────────────────────────────╮ ",
        "                                                      █ │no tasks                                 │ ",
        "                                                      █ ╰─────────────────────────────────────────╯ ",
        "                                                      █                                             ",
        "┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐",
        "│line one                                                                                          │",
        "│line two                                                                                          │",
        "│line three                                                                                        │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
        " CHAT                           ⊟ compact     ● idle      ◐ tool                        zoom normal ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 0, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 62, y: 0, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 1, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 1, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 1, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 1, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 2, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 2, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 2, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 2, fg: Rgb(188, 140, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 98, y: 2, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 3, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 3, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 4, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 5, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 5, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 6, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 6, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 6, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 6, fg: Rgb(201, 209, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 69, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 98, y: 6, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 7, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 98, y: 7, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 8, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 9, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 10, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 11, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 92, y: 11, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 98, y: 11, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 12, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 12, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 13, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 14, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 14, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 15, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 15, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 15, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 65, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 98, y: 15, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 16, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 16, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 17, fg: Rgb(88, 166, 255), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 2, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: UNDERLINED,
        x: 9, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 19, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 20, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 21, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Rgb(88, 166, 255), bg: Rgb(13, 42, 77), underline: Reset, modifier: NONE,
        x: 6, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 23, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 23, fg: Rgb(63, 185, 80), bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 23, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 87, y: 23, fg: Rgb(110, 118, 129), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
